--- a/10_dungeon/kernel/Cargo.toml
+++ b/10_dungeon/kernel/Cargo.toml
@@ -17,3 +17,4 @@ tezos-smart-rollup-encoding = { git = "https://gitlab.com/tezos/tezos" }
 tezos-smart-rollup-storage = { git = "https://gitlab.com/tezos/tezos" }
 tezos-smart-rollup-entrypoint = { git = "https://gitlab.com/tezos/tezos" }
 tezos-smart-rollup-mock = { git = "https://gitlab.com/tezos/tezos" }
+rand = "0.8.4"
