Cargo: add dependecy for getrandom

--- a/10_dungeon/kernel/Cargo.toml
+++ b/10_dungeon/kernel/Cargo.toml
@@ -18,3 +18,4 @@ tezos-smart-rollup-storage = { git = "https://gitlab.com/tezos/tezos" }
 tezos-smart-rollup-entrypoint = { git = "https://gitlab.com/tezos/tezos" }
 tezos-smart-rollup-mock = { git = "https://gitlab.com/tezos/tezos" }
 rand = "0.8.4"
+getrandom = { version = "0.2", features = ["js"] }
