--- a/10_dungeon/kernel/Cargo.toml
+++ b/10_dungeon/kernel/Cargo.toml
@@ -10,13 +10,10 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 # Let's use the last version of the SDK, todo: fix the version if it's an issue
-tezos-smart-rollup-core = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-host = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-debug = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-encoding = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-storage = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-entrypoint = { git = "https://gitlab.com/tezos/tezos" }
-tezos-smart-rollup-mock = { git = "https://gitlab.com/tezos/tezos" }
+tezos-smart-rollup-core = "0.2.0"
+tezos-smart-rollup-host = "0.2.0"
+tezos-smart-rollup-entrypoint = "0.2.0"
+
 rand = "0.8.4"
 getrandom = { version = "0.2", features = ["js"] }
 bincode = "1.3.1"
