--- a/10_dungeon/kernel/Cargo.toml
+++ b/10_dungeon/kernel/Cargo.toml
@@ -10,9 +10,8 @@ crate-type = ["cdylib", "lib"]
 
 [dependencies]
 # Let's use the last version of the SDK, todo: fix the version if it's an issue
-tezos-smart-rollup-core = "0.2.0"
-tezos-smart-rollup-host = "0.2.0"
-tezos-smart-rollup-entrypoint = "0.2.0"
+
+tezos-smart-rollup = "0.2.0"
 
 rand = "0.8.4"
 getrandom = { version = "0.2", features = ["js"] }
