--- a/.github/workflows/dac-initcontainer-import-kernel-docker.yml
+++ b/.github/workflows/dac-initcontainer-import-kernel-docker.yml
@@ -71,7 +71,7 @@ jobs:
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: ${{ github.ref == 'refs/heads/infra-main' }}
           tags: |
             ghcr.io/marigold-dev/dac-initcontainer-import:${{ steps.vars_pt1.outputs.rollup_data_dir_name }}
             ghcr.io/marigold-dev/dac-initcontainer-import:latest
