infra: edit pipelines

--- a/.github/workflows/tzwitter-frontend-docker.yml
+++ b/.github/workflows/tzwitter-frontend-docker.yml
@@ -42,7 +42,7 @@ jobs:
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          push: ${{ github.ref == 'refs/heads/infra-main' }}
+          push: true
           tags: |
             ghcr.io/marigold-dev/tzwitter-frontend:latest
             ghcr.io/marigold-dev/tzwitter-frontend:${{ github.sha }}
