--- a/.github/workflows/tzwitter-initcontainer-import-kernel-docker.yml
+++ b/.github/workflows/tzwitter-initcontainer-import-kernel-docker.yml
@@ -76,7 +76,7 @@ jobs:
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          push: ${{ github.ref == 'refs/heads/infra-main' }}
+          push: true
           tags: |
             ghcr.io/marigold-dev/tzwitter-initcontainer-import:${{ steps.vars_pt1.outputs.rollup_data_dir_name }}
             ghcr.io/marigold-dev/tzwitter-initcontainer-import:latest
