--- a/.github/workflows/tzwitter-frontend-docker.yml
+++ b/.github/workflows/tzwitter-frontend-docker.yml
@@ -21,7 +21,7 @@ jobs:
           sed -i '/TEZOS_RPC/d' 08_tzwitter_app/app/src/config.ts
           sed -i '/ROLLUP_RPC/d' 08_tzwitter_app/app/src/config.ts
           echo "export const TEZOS_RPC = 'https://rpc.ghostnet.teztnets.xyz';" >> 08_tzwitter_app/app/src/config.ts
-          echo "export const ROLLUP_RPC = 'https://tzwitter-rollup-test1.gcp.marigold.dev';" >> 08_tzwitter_app/app/src/config.ts
+          echo "export const ROLLUP_RPC = 'https://tzwitter-rollup.gcp.marigold.dev';" >> 08_tzwitter_app/app/src/config.ts
           cat 08_tzwitter_app/app/src/config.ts
 
       - name: Set up Docker Buildx
