--- a/.github/workflows/tzwitter-frontend-docker.yml
+++ b/.github/workflows/tzwitter-frontend-docker.yml
@@ -40,8 +40,7 @@ jobs:
         with:
           context: ./08_tzwitter_app/app/
           platforms: linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          no-cache: true
           push: true
           tags: |
             ghcr.io/marigold-dev/tzwitter-frontend:latest
