--- a/.github/workflows/tzwitter-initcontainer-import-kernel-docker.yml
+++ b/.github/workflows/tzwitter-initcontainer-import-kernel-docker.yml
@@ -74,8 +74,7 @@ jobs:
         with:
           context: ${{ steps.vars_pt2.outputs.rollup_data_dir_fullpath }}
           platforms: linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          no-cache: true
           push: true
           tags: |
             ghcr.io/marigold-dev/tzwitter-initcontainer-import:${{ steps.vars_pt1.outputs.rollup_data_dir_name }}
